frontend/tests/cases/negative/unique/uniqueProduct.gr.output
Type checking failed: 
Linearity error: frontend/tests/cases/negative/unique/uniqueProduct.gr:5:22:
Linear variable `arrs` is used more than once.